--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,101 @@
     transform: rotate(360deg);
   }
 }
+
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5vh;
+  padding-bottom: 2vh;
+  border-radius: 1vh;
+  border: 2px dashed #d5b8bf;
+  background-color: #1b1b1b;
+}
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.history-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+}
+
+.table-container table {
+  width: 100%;
+  height: 100%;
+  table-layout: fixed;
+}
+
+.table-container td {
+  padding: 5px;
+}
+
+.cal-button {
+  width: 100%;
+  height: 100%;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.screen {
+  background-color: #000000;
+  width: 100%;
+  min-height: 15vh;
+  margin: 1vh;
+}
+
+.screen-number {
+  color: antiquewhite;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.screen-result {
+  text-align: right;
+}
+
+.history-title {
+  width: 100%;
+  text-align: center;
+  color: antiquewhite;
+  background-color: #000000;
+}
+
+.history-content {
+  flex-grow: 1;
+  width: 100%;
+  overflow-y: auto;
+  color: antiquewhite;
+  background-color: #000000;
+  margin-bottom: 2vh;
+  font-family: "Helvetica", serif;
+}
+
+.title{
+  font-weight: bold; 
+}
+
+.content {
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+}
+
+.content li {
+  border-bottom: 1px solid antiquewhite;
+  padding: 8px 0; 
+  color: antiquewhite;
+  font-style: italic;
+  text-align: right;
+}
